d2c-org/ilh-sales/base-objects/main/default/objects/Product2/fields/Conversion_Product__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this product a conversion product?</description>
    <label>Conversion Product</label>
    <type>Checkbox</type>
</CustomField>