d2c-org/ilh-sales/base-objects/main/default/objects/Product2/fields/EnabledForRateTool__c.field-meta.xml
<CustomField>
    <fullName>EnabledForRateTool__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Is this product enabled for the rate tool?</description>
    <label>Enabled for Rate Tool</label>
    <type>Checkbox</type>
</CustomField>