d2c-org/ilh-sales/base-objects/main/default/objects/Product2/fields/IgnoreRateComparisonIntervals__c.field-meta.xml
<CustomField>
    <fullName>IgnoreRateComparisonIntervals__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Should rate comparison intervals be ignored for this product?</description>
    <label>Ignore Rate Comparison Intervals</label>
    <type>Checkbox</type>
</CustomField>