d2c-org/ilh-sales/base-objects/main/default/objects/Product2/fields/Is_Life_Policy__c.field-meta.xml
<CustomField>
    <fullName>Is_Life_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this product a life policy product?</description>
    <label>Is Life Policy</label>
    <type>Checkbox</type>
</CustomField>