d2c-org/ilh-sales/base-objects/main/default/objects/Product2/fields/IsGuaranteedIssue__c.field-meta.xml
<CustomField>
    <fullName>IsGuaranteedIssue__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Is this product a guaranteed issue product?</description>
    <label>Is Guaranteed Issue</label>
    <type>Checkbox</type>
</CustomField>