d2c-org/ilh-sales/base-objects/main/default/objects/Product2/fields/IsLifePolicy__c.field-meta.xml
<CustomField>
    <fullName>IsLifePolicy__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Is this product a life policy product?</description>
    <label>Is Life Policy</label>
    <type>Checkbox</type>
</CustomField>