d2c-org/ilh-sales/base-objects/main/default/objects/Product2/fields/Marketing_Key__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Key__c</fullName>
    <description>This value is used by Marketing Cloud to indicate this product</description>
    <label>Marketing Key</label>
    <length>11</length>
    <type>Text</type>
</CustomField>