d2c-org/ilh-sales/base-objects/main/default/objects/Product2/fields/MarketingProductCode__c.field-meta.xml
<CustomField>
    <fullName>MarketingProductCode__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>This value is used by Marketing Cloud to refer to this product</description>
    <label>Marketing Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>