d2c-org/ilh-sales/base-objects/main/default/objects/Product2/fields/MarketingProductName__c.field-meta.xml
<CustomField>
    <fullName>MarketingProductName__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>This value is used by Marketing Cloud to describe this product</description>
    <label>Marketing Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>