d2c-org/ilh-sales/base-objects/main/default/objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Refers to the family to which this product belongs</description>
    <label>Product Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>