d2c-org/ilh-sales/base-objects/main/default/objects/Product2/fields/RateToolGroupings__c.field-meta.xml
<CustomField>
    <fullName>RateToolGroupings__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>This is used to group the products in the rate tool/quote screen</description>
    <label>Rate Tool Groupings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Life Products</fullName>
            </value>
            <value>
                <fullName>Term Life Only</fullName>
            </value>
            <value>
                <fullName>Whole Life Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>