d2c-org/ilh-sales/base-objects/main/default/objects/Product2/fields/RateToolOrder__c.field-meta.xml
<CustomField>
    <fullName>RateToolOrder__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>Column position for this product when displaying rates</description>
    <label>Rate Tool Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>