d2c-org/ilh-sales/base-objects/main/default/objects/Product2/fields/UnderwritingType__c.field-meta.xml
<CustomField>
    <fullName>UnderwritingType__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>Type of underwriting for this product</description>
    <label>Underwriting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simplified Issue</fullName>
            </value>
            <value>
                <fullName>Guaranteed Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>